fix 修复 新语法 `.toList()` 返回不可变 List 类型导致序列化问题